--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div class="bolo2">
     <h2>Floresta Branca </h2>
     <div class="img2">
-    <img src="img/branco.jpg">
+    <img src="branco.jpg">
 </div>
 </div>
     <p> <a href="index0.html" rel="prev">Voltar para o Menu</a></p>
