--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="img2">
     <img src="branco.jpg">
 </div>
-    <div class="txt2">
+    <div class="texto2">
         <h1>Massa branca com  teste recheio de creme de leite condensado, chantilly e cerejas. Cobertura de chantilly e raspas de chocolate branco.</h1>
      </div>
 </div>
