--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <img src="branco.jpg">
 </div>
     <div class="texto2">
-        <h1>Massa branca com  teste recheio de creme de leite condensado, chantilly e cerejas. Cobertura de chantilly e raspas de chocolate branco.</h1>
+        <h1>Massa branca com recheio de creme de leite condensado, chantilly e cerejas. Cobertura de chantilly e raspas de chocolate branco.</h1>
      </div>
 </div>
     <p> <a href="https://anaalves0215.github.io/index-voltar/" rel="prev">Voltar para o Menu</a></p>
