--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Floresta Branca</title>
+    <title>colheitadeira</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -13,7 +13,7 @@
     <img src="branco.jpg">
 </div>
     <div class="texto2">
-        <h1>Massa branca com recheio de creme de leite condensado, chantilly e cerejas. Cobertura de chantilly e raspas de chocolate branco.</h1>
+        <h1>Uma colheitadeira, também conhecida como colhedora, é uma máquina agrícola utilizada para colher, debulhar e limpar diferentes culturas de grãos, como soja, milho, trigo, entre outros. É uma máquina complexa que automatiza o processo de colheita, substituindo o trabalho manual e aumentando a eficiência em grandes áreas de cultivo. </h1>
      </div>
 </div>
     <p> <a href="https://anaalves0215.github.io/index-voltar/" rel="prev">Voltar para o Menu</a></p>
